--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,77 +1,27 @@
-/* .loginimg {
-  height:20em;
-  width:40em;
-} */
 
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Lexend+Deca&family=Open+Sans&family=Poppins&display=swap');
+
+.App{
+  font-family: 'Chakra Petch', sans-serif;
+}
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 5em;
-  background-color: hsl(216, 82%, 78%);
+  background-color: #a2b9bc;
   width: 100%;
   z-index:1;
   
+font-family: 'Lexend Deca', sans-serif;
+font-weight: bold;
 }
 
-body {
-  background-color: #f5f5f5;
+.studentMain
+{ background-color: #bbb8b8;
+  height: 87.7vh;
+   width:100% 
 }
-.registration-form {
-  background-color: #ffffff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-.form-heading {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333333;
-}
-.form-group {
-  margin-bottom: 20px;
-}
-label {
+.form-title{
   font-weight: bold;
-}
-.upload-btn-wrapper {
-  position: relative;
-  overflow: hidden;
-  display: inline-block;
-}
-.btn-upload {
-  border: 2px solid gray;
-  color: gray;
-  background-color: white;
-  padding: 8px 20px;
-  border-radius: 8px;
-  font-size: 14px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-.btn-upload:hover {
-  border-color: #3498db;
-  color: #3498db;
-}
-.upload-btn-wrapper input[type="file"] {
-  font-size: 100px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-}
-.btn-register {
-  background-color: #3498db;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-}
-.btn-register:hover {
-  background-color: #2980b9;
 }
